--- a/views/Partials/headerLogueado.ejs
+++ b/views/Partials/headerLogueado.ejs
@@ -15,8 +15,7 @@
 	<link rel="stylesheet" href="/stylesheets/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/stylesheets/app.css">
-	<link rel="stylesheet" href="/stylesheets/style.css" 
-</head>
+	<link rel="stylesheet" href="/stylesheets/style.css" </head>
 
 <body>
 	<!-- Header -->
@@ -56,14 +55,12 @@
 				</ul>
 
 				<ul class="right-navbar">
-					<li>
-						
-						<a href="/profile/<%= locals.user.id %>">
+					<li><a href="/profile/<%= locals.user.id %>">
 							<%=locals.user.usuario%> <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
-						<a href="/">
+						<a href="/logout">
 							Cerrar sesión <i class="fas fa-user"></i>
 						</a>
 					</li>
