--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -183,6 +183,10 @@ hr {
   color: white;
 }
 
+.product-owner-user {
+  padding: 10px;
+}
+
 .product-box {
   background-color: #ffffff;
   border-radius: 5px;
@@ -488,6 +492,14 @@ textarea.form-input {
   padding: 10px 20px;
   border-radius: 4px;
   color: #fff;
+}
+
+.btn-delete{
+  background-color: red;
+  padding: 10px 20px;
+  border-radius: 4px;
+  color: #fff;
+  cursor:pointer;
 }
 
 
