--- a/views/product.ejs
+++ b/views/product.ejs
@@ -21,63 +21,74 @@
 	<!-- Header -->
 
 	<!-- /Header -->
-	<% if (locals.user != undefined) { %>
+	<% if (locals.user !=undefined) { %>
 		<%- include('./partials/headerLogueado') %>
-	 <% } else { %>
-		<%- include('./partials/header') %>
-	<% } %>
-		<!-- product detail -->
-		<div class="container products-wrapper">
-			<div class="d-flex align-items-center">
-				<h2 class="products-title">
-					<%= datos.nombreProducto %>
-				</h2>
-				<p class="product-detail-description">
-					<a href="/product-edit/<%= datos.id %>">Editar</a>
-				</p>
-			</div>
-			<div class="product-detail">
-				<div class="row">
-					<article class="col-12 col-lg-8 product-detail-info">
-						<img src="<%= datos.imagenProducto %>" alt="" class="product-detail-img">
-						<p class="product-detail-description">
-							<%= datos.descripcion%>
-						</p>
-					</article>
-					<div class="col-12 col-lg-4">
-						<section class="comments">
-							<% for( i=0; i < datos.comentarios.length; i++){ %>
-								<article>
-									<div class="data">
-										<p class="user">
-											<strong> <a href="/profile/<%= datos.comentarios[i].idUsuario %>">
-													<%= datos.comentarios[i].usuarios.usuario %>:
-												</a> </strong>
-											<%= datos.comentarios[i].textoComentario %>
-										</p>
-									</div>
-								</article>
-								<% } %>
-
-						</section>
-						<form class="form" action="product" method="GET">
-							<input class="form-input" type="text" value="" placeholder="Agregar comentario">
-							<div>
-								<a href="/product" class="volver_index">
-									<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
-								</a>
+			<% } else { %>
+				<%- include('./partials/header') %>
+					<% } %>
+						<!-- product detail -->
+						<div class="container products-wrapper">
+							<div class="d-flex align-items-center">
+								<h2 class="products-title">
+									<%= datos.nombreProducto %>
+								</h2>
+								<p class="product-owner-user">
+									<a href="/profile/<%= datos.usuario.id %>"> por (<%= datos.usuario.usuario %>)</a>
+								</p>
+								<% if (locals.user !=undefined && locals.user.id==datos.usuario.id) { %>
+									<p class="product-detail-description">
+										<a href="/product-edit/<%= datos.id %>">Editar</a>
+									</p>
+									<form action="/product-delete/<%= datos.id %>" method="post">
+										<button type="submit" class="btn-delete">Eliminar</button>
+									</form>
+									<% } %>
 							</div>
-						</form>
-						<hr>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- /product detail -->
+							<div class="product-detail">
+								<div class="row">
+									<article class="col-12 col-lg-8 product-detail-info">
+										<img src="<%= datos.imagenProducto %>" alt="" class="product-detail-img">
+										<p class="product-detail-description">
+											<%= datos.descripcion%>
+										</p>
+									</article>
+									<div class="col-12 col-lg-4">
+										<section class="comments">
+											<% for( i=0; i < datos.comentarios.length; i++){ %>
+												<article>
+													<div class="data">
+														<p class="user">
+															<strong> <a
+																	href="/profile/<%= datos.comentarios[i].idUsuario %>">
+																	<%= datos.comentarios[i].usuarios.usuario %>:
+																</a> </strong>
+															<%= datos.comentarios[i].textoComentario %>
+														</p>
+													</div>
+												</article>
+												<% } %>
 
-		<!-- footer -->
-		<%- include("./partials/footer") %>
-			<!-- /footer -->
+										</section>
+										<form class="form" action="product" method="GET">
+											<input class="form-input" type="text" value=""
+												placeholder="Agregar comentario">
+											<div>
+												<a href="/product" class="volver_index">
+													<button type="submit" class="buy-now-button">AGREGAR
+														COMENTARIO</button>
+												</a>
+											</div>
+										</form>
+										<hr>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- /product detail -->
+
+						<!-- footer -->
+						<%- include("./partials/footer") %>
+							<!-- /footer -->
 
 </body>
 
