--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,15 +28,19 @@
 				<div class="col-12">
 					<h2 class="products-title">Ingresar</h2>
 				</div>
-
+				<% if (locals.errors) {
+					errors.forEach(error => { %>
+					<p> <%= error.msg %> </p>
+				<% })
+					 } %>
 				<form action="/login" method="POST">
 					<div class="input-group">
 						<label for="mail">Email:</label>
-						<input id="mail" type="email" name="mail">
+						<input id="mail" type="email" name="mail" value="<%= locals.old && old.mail ? old.mail : "" %>">
 					</div>
 					<div class="input-group">
 						<label for="contrasenia">Contraseña:</label>
-						<input id="contrasenia" type="password" name="contrasenia">
+						<input id="contrasenia" type="password" name="contrasenia" value="<%= locals.old && old.contrasenia ? old.contrasenia : "" %>">
 					</div>
 					<div class="input-group">
 						<label for="recordame">Recordame</label>
