empezamos comentarios (mini commit)

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -69,7 +69,7 @@
 												<% } %>
 
 										</section>
-										<form class="form" action="product" method="GET">
+										<form class="form" action="product" method="POST">
 											<input class="form-input" type="text" value=""
 												placeholder="Agregar comentario">
 											<div>
