Controles de acceso al product add y profile edit

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -36,7 +36,7 @@
 					<div class="d-flex align-items-center ">
 						<h1 class="main-title">
 							<%= datos.usuario %>
-								<a href="/profile-edit">
+								<a href="/profile-edit/<%= datos.id%>">
 									<i class="fas fa-cog"></i>
 								</a>
 						</h1>
