Funciona el git add

--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -40,7 +40,7 @@
 									</p>
 									<% }) } %>
 
-										<form action="/product-save" method="POST">
+										<form action="/product-add" method="POST">
 											<div class="input-group">
 												<label for="img">Imagen:</label>
 												<input id="img" type="file" name="img" value="">
