--- a/views/product.ejs
+++ b/views/product.ejs
@@ -73,9 +73,9 @@
 		<input class="form-input" type="text" value=""
 			placeholder="Agregar comentario" name="comentario">
 		<div>
-
-				<button type="submit" class="buy-now-button">AGREGAR
-					COMENTARIO</button>
+			<a href="/product/<%= datos.id %>"><button type="submit" class="buy-now-button">AGREGAR
+				COMENTARIO</button></a>
+				
 		</div>
 	</form>
 	<hr>
