ahora se agrega a la base de datos, pero rompe

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -69,7 +69,7 @@
 			<% } %>
 
 	</section>
-	<form class="form" action="/product" method="POST">
+	<form class="form" action="/<%= datos.id %>" method="POST">
 		<input class="form-input" type="text" value=""
 			placeholder="Agregar comentario" name="comentario">
 		<div>
