ahora funciona, faltan las validaciones. ME ROMPIA SOLO POR LAS COMILLAS DOBLESgit statusgit statusgit statusgit status

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -73,8 +73,8 @@
 		<input class="form-input" type="text" value=""
 			placeholder="Agregar comentario" name="comentario">
 		<div>
-			<a href="/product/<%= datos.id %>"><button type="submit" class="buy-now-button">AGREGAR
-				COMENTARIO</button></a>
+			<button type="submit" class="buy-now-button">AGREGAR
+				COMENTARIO</button>
 				
 		</div>
 	</form>
