--- a/views/product-edit.ejs
+++ b/views/product-edit.ejs
@@ -40,7 +40,7 @@
 									</p>
 									<% }) } %>
 
-										<form action="/product-edit" method="POST">
+										<form>
 											<input id="idProducto" type="hidden" name="idProducto"
 												value="<%= datos.id %>">
 											<input id="idUsuario" type="hidden" name="idUsuario"
